# Reidentification

./: .gitignore  main.py  pyproject.toml  sae_sparsity_loss.py
src/Dataloader/: dataloader.py
src/reid_sae/: __init__.py
src/reid_sae/helpers/: device.py
src/reid_sae/utils/data/: _typing.py  veri776.py
src/reid_sae/utils/modules/sae/: __init__.py  _sparse_autoencoder.py  _typing.py  jump_relu.py  sparsity_loss.py
test_notebooks/: CBM.ipynb  clipsenet.ipynb  clipsenet2.ipynb
